my-apps/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  parentRefs:
  - name: gateway-internal
    namespace: gateway
    sectionName: https
  - name: gateway-internal
    namespace: gateway
    sectionName: http
  hostnames:
  - "home.mvt.com.ar"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homeassistant
      port: 8123
